--- a/new-book.html
+++ b/new-book.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label for="Published Date">Published Date</label>
-                <input class="form-control" name="published-date">
+                <input type="date" class="form-control" name="publish_date">
             </div>
             <div class="form-group">
                 <label for="Publisher">Publisher</label>
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label for="Number of Pages">Number of Pages</label>
-                <input class="form-control" name="num-of-pages">
+                <input type="number" class="form-control" name="numOfPages">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
