when form submits opens submission confirmation in new page

--- a/combined.html
+++ b/combined.html
@@ -17,7 +17,7 @@
             <hr>
             <h1>Create New Book</h1>
             <hr>
-            <form action="http://localhost:3000/book" method="POST" target="">
+            <form action="http://localhost:3000/book" method="POST" target="_blank">
                 <div class="form-group">
                     <label for="ISBN">ISBN</label>
                     <input class="form-control" name="isbn">
@@ -69,7 +69,7 @@
                     </div>
     
                     <div class="modal-body">
-                            <form id="editForm" method="POST" target="">
+                            <form id="editForm" method="POST" target="_blank">
                                 <div class="form-group">
                                     <label for="exampleInputPassword1">ISBN</label>
                                     <input class="form-control" name="isbn" id="isbn">
