--- a/combined.html
+++ b/combined.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Book List</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
@@ -17,10 +17,10 @@
                 <hr>
                 <h1>Create New Book</h1>
                 <hr>
-                <form id="newBookForm">
+                <form id="newBookForm" onsubmit="submitNewBookForm(event)">
                     <div class="form-group">
                         <label for="ISBN">ISBN</label>
-                        <input class="form-control" name="isbn">
+                        <input class="form-control" name="isbn" required>
                     </div>
                     <div class="form-group">
                         <label for="Title">Title</label>
